--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,10 +20,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    # Step 2: Set up Terraform
     - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: 1.0.0
+      uses: hashicorp/setup-terraform@v2
 
     - name: Initialize Terraform
       run: terraform init
