moded files for naming and destroying terraform

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,9 +1,10 @@
 name: Terraform Deploy
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch: # Allows you to manually trigger the workflow
+#  push:
+#    branches:
+#      - main
 
 jobs:
   terraform:
