--- a/.github/workflows/terraform_destroy.yml
+++ b/.github/workflows/terraform_destroy.yml
@@ -8,6 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     environment: aws
 
+    # Define environment variables at the job level
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
+
     steps:
       # Checkout repository
       - name: Checkout repository
